Capstone-3/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    name:  sandbox-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
        name:  sandbox-deployment
  template:
    metadata:
      labels:
        name:  sandbox-deployment
    spec:
      containers:
      - image:  sandbox1:latest
        imagePullPolicy: Always
        name:  sandbox-deployment
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10   
        ports:
        - containerPort:  3000
          name:  sandbox-port
