Capstone-3/k8s/sandbox-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  sandbox-service
spec:
  selector:
    name:  sandbox-deployment
  type:  ClusterIP
  ports:
  - name:  sandbox-port
    port:  80
    targetPort:  3000
